--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 sudo: false
 install:
   - pip install catkin-pkg PyYAML rosdistro
-  - pip install coverage nose pep8 pyflakes
+  - pip install coverage flake8 flake8-docstrings flake8-import-order nose pep8 pyflakes
   # install empy for Python 3
   - git clone https://github.com/dirk-thomas/empy.git /tmp/empy
   - cd /tmp/empy
